done chat and noti real time

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,8 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="your cloud name"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="Your api key"
 CLOUDINARY_API_SECRET="api secret"
 
+NEXT_PUBLIC_PUSHER_APP_KEY="20590fd19f41871fbe86"
+PUSHER_APP_ID="Your app id"
+PUSHER_SECRET="Your pusher secret"
+
 
